<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="navigation_drawer_open">Abrir el panel de navegación</string>
    <string name="navigation_drawer_close">Cerrar el panel de navegación</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="copy_rights">TRANSMODELO  © 2021</string>
    <string name="amt_placeholder" translatable="false">Bs XX.xx</string>
    <string name="distance_placeholder" translatable="false">XX.xx Km</string>
    <string name="time_placeholder" translatable="false">XX.xx min</string>
    <string name="text_placeholder" translatable="false">XX xx XX xx</string>
    <string name="sign_in">INICIAR SESIÓN</string>
    <string name="sign_up">REGISTRARSE</string>
    <string name="or_connect_with_social">O conectar con la redes social</string>
    <string name="walk_1">Bienvenido</string>
    <string name="walk_2">Beneficios</string>
    <string name="walk_3">Viaje instantáneo</string>
    <string name="walk_1_description">Gracias por ser parte de Kintó,  la primera App ecuatoriana de mayor proyección, que rompe esquemas de movilidad.</string>
    <string name="walk_2_description">Recibe el 80% de todos tus viajes, adicional tienes descuento en mecánicas, asistencia legal, y descuentos en locales afiliados.</string>
    <string name="walk_3_description">Tus clientes confían en ti y no tienen efectivo, utiliza nuestro QR y realiza el viaje con pago en tarjeta de débito o crédito.</string>
    <string name="lorum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum, non proident, sunt in culpa qui officia deserunt mollit anim id est laborum,non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="welcome_back_sign_in_to_continue">Bienvenido, regístrese para continuar</string>
    <string name="what_your_email_address">¿Cuál es tu dirección de correo electrónico?</string>
    <string name="enter_your_password">Ingresa tu contraseña</string>
    <string name="enter_your_email">Ingresa tu correo electrónico</string>
    <string name="i_forgot_my_password">Olvidé mi contraseña</string>
    <string name="i_need_to_create_an_account">Necesito crear una cuenta</string>
    <string name="invalid_email">Por favor ingresa correo electrónico</string>
    <string name="invalid_password">Por favor, ingresa contraseña</string>
    <string name="name_exampple_com">nombre@ejemplo.com</string>
    <string name="curr_pwd_val">Por favor, ingresa la contraseña actual!</string>
    <string name="confirm_pwd_val">Por favor ingrese confirmar contraseña!</string>
    <string name="enter_the_details_you_used_to_register">Ingresa los siguientes campos para registrarte</string>
    <string name="email">Correo electrónico</string>
    <string name="name">Nombre</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="phone_number">Pais</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="country">País</string>
    <string name="timezone">Zona horaria</string>
    <string name="referral_code">Código de Referencia (Opcional)</string>
    <string name="choose_an_account">Seleccione una cuenta</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="enter_your_mail_id_for_recover">Ingresa su correo electrónico para la recuperación</string>
    <string name="enter_otp">Ingresa código</string>
    <string name="forgot_password_note_msg">Nota : Ingresa el código envío a su correo electrónico registrada</string>
    <string name="otp_validation">Campo de código es obligatorio</string>
    <string name="reset_password">Reiniciar contraseña</string>
    <string name="name_example_com">nombre@ejemplo.com</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="old_password">Contraseña anterior</string>
    <string name="note_please_enter_the_otp_send_tc_your_registered_email_address">Nota: Ingresa el código envío a su correo electrónico registrada</string>
    <string name="trip_type">Tipo de viaje</string>
    <string name="business">Negocio</string>
    <string name="personal">Personal</string>
    <string name="rental">Alquiler</string>
    <string name="vehicle_make">Marca del Vehículo</string>
    <string name="vehicle_model">Modelo de Vehículo</string>
    <string name="vehicle_year">Año del Vehículo</string>
    <string name="vehicle_color">Color del Vehículo</string>
    <string name="vehicle_license_plate">Placa de Vehículo</string>
    <string name="city">Cuidad</string>
    <string name="car_category">Categoría de Auto</string>
    <string name="outstation">Estación Exterior</string>
    <string name="shuttle">Shuttle</string>
    <string name="round_trip">Ida y Vuelta</string>
    <string name="one_way">Ida</string>
    <string name="i_have_read_and_agreed_the_n_terms_and_conditions">He leído y acepto los <b><u>Términos y Condiciones</u></b></string>
    <string name="title_activity_main">Actividad Principal</string>
    <string name="payment">Pago</string>
    <string name="nav_card">Tarjeta</string>
    <string name="your_trips">Historial</string>
    <string name="coupon">Cupón</string>
    <string name="card_payment">Pago con Tarjeta</string>
    <string name="other_payment">Otros Pagos</string>
    <string name="change_card_for_payments">Cambiar tarjeta para pagos</string>
    <string name="wallet">Billetera</string>
    <string name="passbook">Transacción</string>
    <string name="help">Ayuda</string>
    <string name="share">Compartir</string>
    <string name="share_content_referral">Hey mira esta aplicación, %1$s \nUser - https://play.google.com/store/apps/details?id=com.kinto.user\nProvider - https://play.google.com/store/apps/details?id=com.kinto.partner.\nInstalar esta aplicación con el código de referencia %2$s</string>
    <string name="invite_referral">Invitar a la referencia</string>
    <string name="faq_support">Soporte de preguntas frecuentes</string>
    <string name="terms_and_conditions">Términos y Condiciones</string>
    <string name="privacy_policy">Política de Privacidad</string>
    <string name="logout">Cerrar sesión</string>
    <string name="settings">Ajustes</string>
    <string name="nav_header_desc">Navegación</string>
    <string name="earnings">Ganancias</string>
    <string name="summary">Resumen</string>
    <string name="walletTransactions">Documento</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="past">Pasado</string>
    <string name="upcoming">Próximamente</string>
    <string name="upcoming_trip_details">Detalles del Próximo Viaje</string>
    <string name="no_data_found">No se han encontrado datos</string>
    <string name="no_past_found">Revisa todos los Viaje realizados.</string>
    <string name="no_upcoming_found">Revisa todos los Viaje realizados.</string>
    <string name="booking_id">Identificación de la Reserva</string>
    <string name="booking_id_">Identificación de la Reserva: %s</string>
    <string name="favorites">Favoritos</string>
    <string name="choose_language">Elija el Idioma</string>
    <string name="lost_my_item">Perdí mi cosa</string>
    <string name="incorrect_charge_dispute">Incorrecto conflicto de cargos</string>
    <string name="i_would_like_to_refund">Me gustaría reembolsar</string>
    <string name="submit">Enviar</string>
    <string name="close">Cerrar</string>
    <string name="write_your_comment">Escriba su comentario</string>
    <string name="reason_for_canceling">Razón de la cancelación</string>
    <string name="ratings">Calificaciones</string>
    <string name="cancel_ride">Cancelar el Viaje</string>
    <string name="call">Llamada</string>
    <string name="pay_via">Paga a través de</string>
    <string name="comments">Comentarios</string>
    <string name="cash">Efectivo</string>
    <string name="view_receipt">Ver el recibo</string>
    <string name="payment_method">Forma de pago</string>
    <string name="invoice">Factura</string>
    <string name="pay_now">Paga ahora</string>
    <string name="time_taken">El tiempo utilizado</string>
    <string name="distance_travelled">Distancia Recorrida</string>
    <string name="base_fare">Tarifa base</string>
    <string name="distance_fare">Tarifa a distancia</string>
    <string name="tax">Impuesto</string>
    <string name="tips">Propinas</string>
    <string name="add_tips">Agregar propinas</string>
    <string name="total">Total</string>
    <string name="title_activity_help">Actividad de Ayuda</string>
    <string name="profile">Perfil</string>
    <string name="service">Servicio</string>
    <string name="save">Guardar</string>
    <string name="today_completed_target">Valida aquí el fruto de tu esfuerzo.</string>
    <string name="sample_earnings" translatable="false">0/0</string>
    <string name="target_completed">Objetivo</string>
    <string name="total_earnings">Ganancias en Total</string>
    <string name="time">Tiempo</string>
    <string name="distance">Distancia</string>
    <string name="amount">Precio</string>
    <string name="no_rides">No hay viajes completados.</string>
    <string name="total_rides">Total de Viaje </string>
    <string name="revenue">Ingresos</string>
    <string name="schedule_rides">Viaje programados</string>
    <string name="canceled_rides">Viaje cancelados</string>
    <string name="rides">Viajes</string>
    <string name="past_trip_detail">Detalle del Viaje Anterior</string>
    <string name="upcoming_tripdetail">Detalle del Próximo Viaje</string>
    <string name="support">Soporte</string>
    <string name="our_team_persons_will_contact_you_soon">Cuéntanos tus opiniones, sugerencias o quejas.
Un asesor se contactará contigo antes de 24h.
</string>
    <string name="refer_your_friends_to_drive">Recomienda a tus amigos a conducir!</string>
    <string name="give_the_free_ride_by_reffering_the_invite_code_worth_10vce">Dar el Viaje gratis por referencia al código de invitación que vale %s</string>
    <string name="share_your_invite_code">Comparte tu código de invitación</string>
    <string name="refferal_earning">Ganancia de referencia</string>
    <string name="total_members">Usuarios en Total</string>
    <string name="invite_friends">Invitar a los Amigos</string>
    <string name="invite_refferal">Invitar a Refferal</string>
    <string name="change_password">Cambiar la Contraseña</string>
    <string name="current_password">Contraseña Actual</string>
    <string name="looking_to_change_password">Buscando cambiar la contraseña</string>
    <string name="go_offline">Desconectar</string>
    <string name="go_online">Entrar en línea</string>
    <string name="reject">Rechazar</string>
    <string name="accept">Aceptar</string>
    <string name="pick_up_location">Ubicación de origen</string>
    <string name="drop_location">Ubicación de destino</string>
    <string name="timer_start">1</string>
    <string name="schedule">Programación</string>
    <string name="pick_up">Ubicación de origen</string>
    <string name="pick_up_invoice">Iniciar Viaje</string>
    <string name="drop_at">Ubicación de destino</string>
    <string name="car_model">Modelo de vehículo</string>
    <string name="car_number">Numero de Matricula</string>
    <string name="select_service_type">Seleccione el tipo de servicio</string>
</resources>