<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">


    <Button
        android:id="@+id/sign_up"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/clanpro_medium"
        android:text="@string/sign_up"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:translationY="-110dp" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"

        android:layout_alignTop="@id/sign_up"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/clanpro_medium"
        android:text="@string/sign_in"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/social_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/clanpro_narrnews"
        android:padding="12dp"
        android:text="@string/or_connect_with_social"
        android:textColor="#FFFFFF"
        android:translationY="120dp" />

</RelativeLayout>