<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.transmodelo.conductor.ui.activity.welcome.WelcomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <!--visibility Gone as client dose not want the view pager-->
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:id="@+id/layoutDots"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone"
            tools:ignore="ObsoleteLayoutParam" />

        <ImageView

            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_250sdp"
            android:src="@drawable/logo_conductor" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llLoginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_round_primary"
                android:fontFamily="@font/clanpro_medium"
                android:text="@string/sign_in"
                android:textColor="#FFF"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_round_accent"
                android:fontFamily="@font/clanpro_medium"
                android:text="@string/sign_up"
                android:textColor="#FFF" />

        </LinearLayout>

        <TextView
            android:id="@+id/social_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/clanpro_narrnews"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/or_connect_with_social"
            android:textColor="@color/ripple_color"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>