<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.transmodelo.conductor.ui.activity.profile.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_main_app" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:transitionName="picture"
                    app:srcCompat="@drawable/ic_user_placeholder" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/activity_vertical_margin"
                            android:paddingTop="@dimen/activity_vertical_margin"
                            android:paddingEnd="@dimen/activity_vertical_margin"
                            android:text="@string/first_name"
                            android:textSize="@dimen/_12ssp" />


                        <EditText
                            android:id="@+id/txtFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:paddingStart="@dimen/activity_vertical_margin"
                            android:paddingTop="@dimen/_7sdp"
                            android:paddingEnd="@dimen/activity_vertical_margin"
                            android:paddingBottom="@dimen/activity_vertical_margin"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/text_18" />

                    </LinearLayout>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/activity_vertical_margin"
                            android:paddingTop="@dimen/activity_vertical_margin"
                            android:paddingEnd="@dimen/activity_vertical_margin"
                            android:text="@string/last_name"
                            android:textSize="@dimen/_12ssp" />

                        <EditText
                            android:id="@+id/txtLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:imeOptions="actionNext"
                            android:inputType="text|textCapSentences"
                            android:maxLines="1"
                            android:paddingStart="@dimen/activity_vertical_margin"
                            android:paddingTop="@dimen/_7sdp"
                            android:paddingEnd="@dimen/activity_vertical_margin"
                            android:paddingBottom="@dimen/activity_vertical_margin"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/text_18" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_7sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_7sdp"
                        android:paddingTop="@dimen/_7sdp"
                        android:paddingEnd="@dimen/_7sdp"
                        android:text="@string/phone_number"
                        android:textSize="@dimen/_12ssp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_42sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="@drawable/shadow_view">

                        <ImageView
                            android:id="@+id/countryImage"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:contentDescription="@string/app_name"
                            app:srcCompat="@drawable/flag_au" />

                        <TextView
                            android:id="@+id/countryNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="@dimen/_6sdp"
                            android:layout_toEndOf="@+id/countryImage"
                            android:gravity="center"
                            android:text="+61"
                            android:textSize="@dimen/_15sdp" />

                        <EditText
                            android:id="@+id/phoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentBottom="true"
                            android:layout_toEndOf="@+id/countryNumber"
                            android:hint="@string/phone_number"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:textSize="@dimen/_15sdp" />

                       <!-- <ImageView
                            android:id="@+id/qr_scan"
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center|end"
                            android:contentDescription="@string/qr_scan"
                            app:srcCompat="@drawable/ic_qr_code" />-->

                    </RelativeLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_7sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_7sdp"
                        android:paddingTop="@dimen/_7sdp"
                        android:paddingEnd="@dimen/_7sdp"
                        android:text="@string/email"
                        android:textSize="@dimen/_12ssp" />

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/text_18" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_7sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_7sdp"
                        android:paddingTop="@dimen/_7sdp"
                        android:paddingEnd="@dimen/_7sdp"
                        android:text="@string/service"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/serviceTxt"
                        android:paddingStart="@dimen/_7sdp"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:text="@string/service"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/txtService"
                        android:enabled="false"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:prompt="@string/select_service_type"
                        android:layout_gravity="center" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_7sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_7sdp"
                        android:paddingTop="@dimen/_7sdp"
                        android:paddingEnd="@dimen/_7sdp"
                        android:text="@string/car_model"
                        android:textSize="@dimen/_12ssp" />

                    <EditText
                        android:id="@+id/txtModel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:enabled="false"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/text_18" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_7sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_7sdp"
                        android:paddingTop="@dimen/_7sdp"
                        android:paddingEnd="@dimen/_7sdp"
                        android:text="@string/car_number"
                        android:textSize="@dimen/_12ssp" />

                    <EditText
                        android:id="@+id/txtNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:enabled="false"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/text_18" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round_primary"
                    android:text="@string/save"
                    android:textColor="#FFF" />

                <TextView
                    android:id="@+id/lblChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/clanpro_narrnews"
                    android:gravity="center"
                    android:padding="@dimen/activity_vertical_margin"
                    android:text="@string/looking_to_change_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_18"
                    android:visibility="invisible" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>